--- a/test1.yaml
+++ b/test1.yaml
@@ -1,1 +1,8 @@
-
+---
+- name: This is test
+  hosts: localhost
+  tasks:
+    - name: Create a file and write content.
+      copy:
+        content: This is TEST playbook
+        dest: /tmp/out.txt
